implemented getopt_long options for psuedorandom mode and a help option

--- a/proportional-share-schedulers/makefile
+++ b/proportional-share-schedulers/makefile
@@ -2,10 +2,20 @@ CC = gcc
 CFLAGS = -Wall -g -Wextra
 
 ticket:
-	$(CC) $(CLFAGS) ticket.c ticket.o
+	$(CC) $(CLFAGS) ticket.c -o ticket
+
+test:
+	$(CC) $(CFLAGS) test.c -o test
 
 all:
 
+clean-ticket:
+	rm -f *~ *.o ticket
+
+clean-test:
+	rm -f *~ *.o test
+
 clean:
 	rm -f *~ *.o ticket
+	rm -f *~ *.o test
 
